<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title">How to Train Your Dragon: the Hidden World</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="poster">Poster</string>
    <string name="movie">Movie</string>
    <string name="tv">TV Show</string>
    <string name="logo">Logo</string>
    <string name="detail">Detail</string>
    <string name="separator">|</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="tagline">Tagline: %s</string>
    <string name="duration">Duration: %s</string>
    <string name="episodes">Total Episodes: %d</string>
    <string name="seasons">Total Seasons: %d</string>
    <string name="backdrop">Backdrop</string>

    <string name="favorite">Favorite</string>
    <string name="popular">Popular</string>
    <string name="az">A-Z</string>
    <string name="za">Z-A</string>

    <string name="noFav">No Favorite</string>
</resources>